Tue Jan 27 16:31:13 2004  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: cleaned up some cruft.

Tue Jan 27 16:07:27 2004  Tim Janik  <timj@gtk.org>

	* sficomport.[hc]: support sending value lists, added ability to
	receive lists of values to reduze context switches.

	* sficxx.h: reimplement specialized versions of boxed_copy and
	boxed_free, value_get_boxed and value_set_boxed functions for
	record handles and sequences which special case SfiRec and
	SfiSeq vs. boxed record and sequence types.

	* sfidl-module.cc: provide NAMESPACE_IS_OBJECT() macros for generated
	object types. implement value conversions between boxed and
	Sfi types (sfirec/records, sfiseq/sequences, choice/enum, object/proxy).

	* sfigluecodec.c: bulk send events if possible to reduce
	context switches.

	* sfivalues.[hc]: added sfi_value_get_enum_auto() and
	sfi_value_set_enum_auto() to support the idl compiler.
	made sfi_enum2choice() return a constant, non-duplicated string.

Tue Jan 27 00:31:35 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-parser.*: Resort classes in a way that derived classes always
	occur after their base classes in the vector returned by getClasses().
	This allows bindings to rely on that assumption; in C++ for instance
	you need to specify base classes before the derived classes, whereas
	the IDL file syntax allows you to invert the order.

Mon Jan 26 19:55:42 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.*: CodeGenerator: Added setOption and getOptions
	methods, to allow code generators to come with their own options.

	* sfidl-options.cc sfidl.cc: Parse options provided by code generators
	in Options::parse. Get rid of a the Target enum, use factories only to
	choose which code generator to use.

	* sfidl-cxx.* sfidl-generator.* sfidl-typelist.*: Provide a factory
	for --cxx, --qt and --list-types. Changed CodeGenerator::run() to return
	boolean, to allow code generators to fail on inconsistent options.
